Coursework/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> declarations
Rule 2     main -> standart_subprogram
Rule 3     main -> if_statement
Rule 4     main -> expression
Rule 5     main -> standart_cycle
Rule 6     declarations -> VAR identifier_list COLON type SEMICOLON
Rule 7     declarations -> VAR identifier_list COLON type SEMICOLON complex_declar
Rule 8     standart_subprogram -> FUNCTION ID OPEN_BR parameter_list CLOSE_BR COLON standart_type SEMICOLON
Rule 9     if_statement -> IF OPEN_BR logic_expression CLOSE_BR EQUALS boolean_value then_else_statement
Rule 10    if_statement -> IF OPEN_BR relational_expression CLOSE_BR then_else_statement
Rule 11    then_else_statement -> THEN compound_statement
Rule 12    then_else_statement -> THEN simple_statement
Rule 13    then_else_statement -> THEN compound_statement ELSE compound_statement
Rule 14    then_else_statement -> THEN simple_statement ELSE compound_statement
Rule 15    then_else_statement -> THEN compound_statement ELSE simple_statement
Rule 16    then_else_statement -> THEN simple_statement ELSE simple_statement
Rule 17    expression -> math_expression
Rule 18    expression -> logic_expression
Rule 19    expression -> relational_expression
Rule 20    expression -> assignment_expression
Rule 21    standart_cycle -> standart_while
Rule 22    standart_cycle -> standart_for
Rule 23    parameter_list -> identifier_list COLON type
Rule 24    parameter_list -> parameter_list SEMICOLON identifier_list COLON type
Rule 25    type -> standart_type
Rule 26    type -> ARRAY OPEN_SQUARE_BR NUMBER POINT POINT NUMBER CLOSE_SQUARE_BR OF standart_type
Rule 27    type -> standart_string
Rule 28    identifier_list -> ID
Rule 29    identifier_list -> identifier_list COMMA ID
Rule 30    complex_declar -> identifier_list COLON type SEMICOLON
Rule 31    complex_declar -> complex_declar identifier_list COLON type SEMICOLON
Rule 32    standart_type -> INTEGER
Rule 33    standart_type -> CHAR
Rule 34    standart_type -> BOOLEAN
Rule 35    standart_string -> STRING
Rule 36    standart_string -> STRING OPEN_SQUARE_BR NUMBER CLOSE_SQUARE_BR
Rule 37    standart_while -> WHILE OPEN_BR logic_expression CLOSE_BR DO compound_statement
Rule 38    standart_while -> WHILE OPEN_BR logic_expression CLOSE_BR DO simple_statement
Rule 39    standart_while -> WHILE OPEN_BR relational_expression CLOSE_BR DO compound_statement
Rule 40    standart_while -> WHILE OPEN_BR relational_expression CLOSE_BR DO simple_statement
Rule 41    standart_for -> FOR ID EQUALITY NUMBER TO NUMBER DO compound_statement
Rule 42    standart_for -> FOR ID EQUALITY NUMBER DOWNTO NUMBER DO compound_statement
Rule 43    assignment_expression -> ID EQUALITY NUMBER
Rule 44    assignment_expression -> ID EQUALITY QUOTE ID QUOTE
Rule 45    assignment_expression -> ID EQUALITY boolean_value
Rule 46    assignment_expression -> ID EQUALITY math_expression
Rule 47    assignment_expression -> ID EQUALITY logic_expression
Rule 48    relational_expression -> simple_rel
Rule 49    relational_expression -> complex_rel
Rule 50    complex_rel -> simple_math rel_sign ID
Rule 51    complex_rel -> complex_math rel_sign ID
Rule 52    complex_rel -> ID rel_sign simple_math
Rule 53    complex_rel -> ID rel_sign complex_math
Rule 54    complex_rel -> simple_math rel_sign NUMBER
Rule 55    complex_rel -> complex_math rel_sign NUMBER
Rule 56    complex_rel -> NUMBER rel_sign simple_math
Rule 57    complex_rel -> NUMBER rel_sign complex_math
Rule 58    complex_rel -> OPEN_BR simple_math CLOSE_BR rel_sign ID
Rule 59    complex_rel -> OPEN_BR complex_math CLOSE_BR rel_sign ID
Rule 60    complex_rel -> ID rel_sign OPEN_BR simple_math CLOSE_BR
Rule 61    complex_rel -> ID rel_sign OPEN_BR complex_math CLOSE_BR
Rule 62    complex_rel -> OPEN_BR simple_math CLOSE_BR rel_sign NUMBER
Rule 63    complex_rel -> OPEN_BR complex_math CLOSE_BR rel_sign NUMBER
Rule 64    complex_rel -> NUMBER rel_sign OPEN_BR simple_math CLOSE_BR
Rule 65    complex_rel -> NUMBER rel_sign OPEN_BR complex_math CLOSE_BR
Rule 66    complex_rel -> math_expression rel_sign math_expression
Rule 67    complex_rel -> OPEN_BR math_expression CLOSE_BR rel_sign OPEN_BR math_expression CLOSE_BR
Rule 68    math_expression -> simple_math
Rule 69    math_expression -> complex_math
Rule 70    logic_expression -> simple_logic
Rule 71    logic_expression -> complex_logic
Rule 72    complex_math -> OPEN_BR simple_math CLOSE_BR math_sign ID
Rule 73    complex_math -> OPEN_BR simple_math CLOSE_BR math_sign NUMBER
Rule 74    complex_math -> ID math_sign OPEN_BR simple_math CLOSE_BR
Rule 75    complex_math -> NUMBER math_sign OPEN_BR simple_math CLOSE_BR
Rule 76    complex_math -> OPEN_BR simple_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
Rule 77    complex_math -> OPEN_BR simple_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
Rule 78    complex_math -> OPEN_BR complex_math CLOSE_BR math_sign ID
Rule 79    complex_math -> OPEN_BR complex_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
Rule 80    complex_math -> OPEN_BR complex_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
Rule 81    complex_logic -> OPEN_BR simple_logic CLOSE_BR log_sign ID
Rule 82    complex_logic -> OPEN_BR simple_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
Rule 83    complex_logic -> OPEN_BR complex_logic CLOSE_BR log_sign ID
Rule 84    complex_logic -> OPEN_BR complex_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
Rule 85    simple_math -> ID math_sign ID
Rule 86    simple_math -> ID math_sign NUMBER
Rule 87    simple_math -> NUMBER math_sign ID
Rule 88    simple_math -> NUMBER math_sign NUMBER
Rule 89    compound_statement -> BEGIN simple_statement END
Rule 90    simple_statement -> statement_list
Rule 91    simple_statement -> empty
Rule 92    statement_list -> statement
Rule 93    statement_list -> statement_list SEMICOLON statement
Rule 94    statement -> assignment_expression
Rule 95    statement -> standart_cycle
Rule 96    simple_logic -> ID log_sign ID
Rule 97    simple_rel -> ID rel_sign ID
Rule 98    simple_rel -> ID rel_sign NUMBER
Rule 99    simple_rel -> ID rel_sign QUOTE ID QUOTE
Rule 100   log_sign -> AND
Rule 101   log_sign -> OR
Rule 102   rel_sign -> MORE_OR_EQUAL
Rule 103   rel_sign -> LESS_OR_EQUAL
Rule 104   rel_sign -> NOT_EQUAL
Rule 105   rel_sign -> MORE
Rule 106   rel_sign -> LESS
Rule 107   rel_sign -> EQUALS
Rule 108   boolean_value -> TRUE
Rule 109   boolean_value -> FALSE
Rule 110   math_sign -> PLUS
Rule 111   math_sign -> MINUS
Rule 112   math_sign -> DIVISION
Rule 113   math_sign -> MULTIPLICATION
Rule 114   math_sign -> DIV
Rule 115   math_sign -> MOD
Rule 116   empty -> <empty>

Terminals, with rules where they appear

AND                  : 100
ARRAY                : 26
BEGIN                : 89
BOOLEAN              : 34
CHAR                 : 33
CLOSE_BR             : 8 9 10 37 38 39 40 58 59 60 61 62 63 64 65 67 67 72 73 74 75 76 76 77 77 78 79 79 80 80 81 82 82 83 84 84
CLOSE_SQUARE_BR      : 26 36
COLON                : 6 7 8 23 24 30 31
COMMA                : 29
DIV                  : 114
DIVISION             : 112
DO                   : 37 38 39 40 41 42
DOWNTO               : 42
ELSE                 : 13 14 15 16
END                  : 89
EQUALITY             : 41 42 43 44 45 46 47
EQUALS               : 9 107
FALSE                : 109
FOR                  : 41 42
FUNCTION             : 8
ID                   : 8 28 29 41 42 43 44 44 45 46 47 50 51 52 53 58 59 60 61 72 74 78 81 83 85 85 86 87 96 96 97 97 98 99 99
IF                   : 9 10
INTEGER              : 32
LESS                 : 106
LESS_OR_EQUAL        : 103
MINUS                : 111
MOD                  : 115
MORE                 : 105
MORE_OR_EQUAL        : 102
MULTIPLICATION       : 113
NOT_EQUAL            : 104
NUMBER               : 26 26 36 41 41 42 42 43 54 55 56 57 62 63 64 65 73 75 86 87 88 88 98
OF                   : 26
OPEN_BR              : 8 9 10 37 38 39 40 58 59 60 61 62 63 64 65 67 67 72 73 74 75 76 76 77 77 78 79 79 80 80 81 82 82 83 84 84
OPEN_SQUARE_BR       : 26 36
OR                   : 101
PLUS                 : 110
POINT                : 26 26
QUOTE                : 44 44 99 99
SEMICOLON            : 6 7 8 24 30 31 93
STRING               : 35 36
THEN                 : 11 12 13 14 15 16
TO                   : 41
TRUE                 : 108
VAR                  : 6 7
WHILE                : 37 38 39 40
error                : 

Nonterminals, with rules where they appear

assignment_expression : 20 94
boolean_value        : 9 45
complex_declar       : 7 31
complex_logic        : 71 83 84
complex_math         : 51 53 55 57 59 61 63 65 69 77 78 79 80 80
complex_rel          : 49
compound_statement   : 11 13 13 14 15 37 39 41 42
declarations         : 1
empty                : 91
expression           : 4
identifier_list      : 6 7 23 24 29 30 31
if_statement         : 3
log_sign             : 81 82 83 84 96
logic_expression     : 9 18 37 38 47
main                 : 0
math_expression      : 17 46 66 66 67 67
math_sign            : 72 73 74 75 76 77 78 79 80 85 86 87 88
parameter_list       : 8 24
rel_sign             : 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 97 98 99
relational_expression : 10 19 39 40
simple_logic         : 70 81 82 82 84
simple_math          : 50 52 54 56 58 60 62 64 68 72 73 74 75 76 76 77 79
simple_rel           : 48
simple_statement     : 12 14 15 16 16 38 40 89
standart_cycle       : 5 95
standart_for         : 22
standart_string      : 27
standart_subprogram  : 2
standart_type        : 8 25 26
standart_while       : 21
statement            : 92 93
statement_list       : 90 93
then_else_statement  : 9 10
type                 : 6 7 23 24 30 31

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . declarations
    (2) main -> . standart_subprogram
    (3) main -> . if_statement
    (4) main -> . expression
    (5) main -> . standart_cycle
    (6) declarations -> . VAR identifier_list COLON type SEMICOLON
    (7) declarations -> . VAR identifier_list COLON type SEMICOLON complex_declar
    (8) standart_subprogram -> . FUNCTION ID OPEN_BR parameter_list CLOSE_BR COLON standart_type SEMICOLON
    (9) if_statement -> . IF OPEN_BR logic_expression CLOSE_BR EQUALS boolean_value then_else_statement
    (10) if_statement -> . IF OPEN_BR relational_expression CLOSE_BR then_else_statement
    (17) expression -> . math_expression
    (18) expression -> . logic_expression
    (19) expression -> . relational_expression
    (20) expression -> . assignment_expression
    (21) standart_cycle -> . standart_while
    (22) standart_cycle -> . standart_for
    (68) math_expression -> . simple_math
    (69) math_expression -> . complex_math
    (70) logic_expression -> . simple_logic
    (71) logic_expression -> . complex_logic
    (48) relational_expression -> . simple_rel
    (49) relational_expression -> . complex_rel
    (43) assignment_expression -> . ID EQUALITY NUMBER
    (44) assignment_expression -> . ID EQUALITY QUOTE ID QUOTE
    (45) assignment_expression -> . ID EQUALITY boolean_value
    (46) assignment_expression -> . ID EQUALITY math_expression
    (47) assignment_expression -> . ID EQUALITY logic_expression
    (37) standart_while -> . WHILE OPEN_BR logic_expression CLOSE_BR DO compound_statement
    (38) standart_while -> . WHILE OPEN_BR logic_expression CLOSE_BR DO simple_statement
    (39) standart_while -> . WHILE OPEN_BR relational_expression CLOSE_BR DO compound_statement
    (40) standart_while -> . WHILE OPEN_BR relational_expression CLOSE_BR DO simple_statement
    (41) standart_for -> . FOR ID EQUALITY NUMBER TO NUMBER DO compound_statement
    (42) standart_for -> . FOR ID EQUALITY NUMBER DOWNTO NUMBER DO compound_statement
    (85) simple_math -> . ID math_sign ID
    (86) simple_math -> . ID math_sign NUMBER
    (87) simple_math -> . NUMBER math_sign ID
    (88) simple_math -> . NUMBER math_sign NUMBER
    (72) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign ID
    (73) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign NUMBER
    (74) complex_math -> . ID math_sign OPEN_BR simple_math CLOSE_BR
    (75) complex_math -> . NUMBER math_sign OPEN_BR simple_math CLOSE_BR
    (76) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
    (77) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
    (78) complex_math -> . OPEN_BR complex_math CLOSE_BR math_sign ID
    (79) complex_math -> . OPEN_BR complex_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
    (80) complex_math -> . OPEN_BR complex_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
    (96) simple_logic -> . ID log_sign ID
    (81) complex_logic -> . OPEN_BR simple_logic CLOSE_BR log_sign ID
    (82) complex_logic -> . OPEN_BR simple_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
    (83) complex_logic -> . OPEN_BR complex_logic CLOSE_BR log_sign ID
    (84) complex_logic -> . OPEN_BR complex_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
    (97) simple_rel -> . ID rel_sign ID
    (98) simple_rel -> . ID rel_sign NUMBER
    (99) simple_rel -> . ID rel_sign QUOTE ID QUOTE
    (50) complex_rel -> . simple_math rel_sign ID
    (51) complex_rel -> . complex_math rel_sign ID
    (52) complex_rel -> . ID rel_sign simple_math
    (53) complex_rel -> . ID rel_sign complex_math
    (54) complex_rel -> . simple_math rel_sign NUMBER
    (55) complex_rel -> . complex_math rel_sign NUMBER
    (56) complex_rel -> . NUMBER rel_sign simple_math
    (57) complex_rel -> . NUMBER rel_sign complex_math
    (58) complex_rel -> . OPEN_BR simple_math CLOSE_BR rel_sign ID
    (59) complex_rel -> . OPEN_BR complex_math CLOSE_BR rel_sign ID
    (60) complex_rel -> . ID rel_sign OPEN_BR simple_math CLOSE_BR
    (61) complex_rel -> . ID rel_sign OPEN_BR complex_math CLOSE_BR
    (62) complex_rel -> . OPEN_BR simple_math CLOSE_BR rel_sign NUMBER
    (63) complex_rel -> . OPEN_BR complex_math CLOSE_BR rel_sign NUMBER
    (64) complex_rel -> . NUMBER rel_sign OPEN_BR simple_math CLOSE_BR
    (65) complex_rel -> . NUMBER rel_sign OPEN_BR complex_math CLOSE_BR
    (66) complex_rel -> . math_expression rel_sign math_expression
    (67) complex_rel -> . OPEN_BR math_expression CLOSE_BR rel_sign OPEN_BR math_expression CLOSE_BR

    VAR             shift and go to state 7
    FUNCTION        shift and go to state 8
    IF              shift and go to state 11
    ID              shift and go to state 9
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    NUMBER          shift and go to state 24
    OPEN_BR         shift and go to state 10

    main                           shift and go to state 1
    declarations                   shift and go to state 2
    standart_subprogram            shift and go to state 3
    if_statement                   shift and go to state 4
    expression                     shift and go to state 5
    standart_cycle                 shift and go to state 6
    logic_expression               shift and go to state 12
    relational_expression          shift and go to state 13
    math_expression                shift and go to state 14
    assignment_expression          shift and go to state 15
    standart_while                 shift and go to state 16
    standart_for                   shift and go to state 17
    simple_math                    shift and go to state 18
    complex_math                   shift and go to state 19
    simple_logic                   shift and go to state 20
    complex_logic                  shift and go to state 21
    simple_rel                     shift and go to state 22
    complex_rel                    shift and go to state 23

state 1

    (0) S' -> main .



state 2

    (1) main -> declarations .

    $end            reduce using rule 1 (main -> declarations .)


state 3

    (2) main -> standart_subprogram .

    $end            reduce using rule 2 (main -> standart_subprogram .)


state 4

    (3) main -> if_statement .

    $end            reduce using rule 3 (main -> if_statement .)


state 5

    (4) main -> expression .

    $end            reduce using rule 4 (main -> expression .)


state 6

    (5) main -> standart_cycle .

    $end            reduce using rule 5 (main -> standart_cycle .)


state 7

    (6) declarations -> VAR . identifier_list COLON type SEMICOLON
    (7) declarations -> VAR . identifier_list COLON type SEMICOLON complex_declar
    (28) identifier_list -> . ID
    (29) identifier_list -> . identifier_list COMMA ID

    ID              shift and go to state 28

    identifier_list                shift and go to state 27

state 8

    (8) standart_subprogram -> FUNCTION . ID OPEN_BR parameter_list CLOSE_BR COLON standart_type SEMICOLON

    ID              shift and go to state 29


state 9

    (43) assignment_expression -> ID . EQUALITY NUMBER
    (44) assignment_expression -> ID . EQUALITY QUOTE ID QUOTE
    (45) assignment_expression -> ID . EQUALITY boolean_value
    (46) assignment_expression -> ID . EQUALITY math_expression
    (47) assignment_expression -> ID . EQUALITY logic_expression
    (85) simple_math -> ID . math_sign ID
    (86) simple_math -> ID . math_sign NUMBER
    (74) complex_math -> ID . math_sign OPEN_BR simple_math CLOSE_BR
    (96) simple_logic -> ID . log_sign ID
    (97) simple_rel -> ID . rel_sign ID
    (98) simple_rel -> ID . rel_sign NUMBER
    (99) simple_rel -> ID . rel_sign QUOTE ID QUOTE
    (52) complex_rel -> ID . rel_sign simple_math
    (53) complex_rel -> ID . rel_sign complex_math
    (60) complex_rel -> ID . rel_sign OPEN_BR simple_math CLOSE_BR
    (61) complex_rel -> ID . rel_sign OPEN_BR complex_math CLOSE_BR
    (110) math_sign -> . PLUS
    (111) math_sign -> . MINUS
    (112) math_sign -> . DIVISION
    (113) math_sign -> . MULTIPLICATION
    (114) math_sign -> . DIV
    (115) math_sign -> . MOD
    (100) log_sign -> . AND
    (101) log_sign -> . OR
    (102) rel_sign -> . MORE_OR_EQUAL
    (103) rel_sign -> . LESS_OR_EQUAL
    (104) rel_sign -> . NOT_EQUAL
    (105) rel_sign -> . MORE
    (106) rel_sign -> . LESS
    (107) rel_sign -> . EQUALS

    EQUALITY        shift and go to state 30
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    DIVISION        shift and go to state 36
    MULTIPLICATION  shift and go to state 37
    DIV             shift and go to state 38
    MOD             shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    MORE_OR_EQUAL   shift and go to state 42
    LESS_OR_EQUAL   shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    MORE            shift and go to state 45
    LESS            shift and go to state 46
    EQUALS          shift and go to state 47

    math_sign                      shift and go to state 31
    log_sign                       shift and go to state 32
    rel_sign                       shift and go to state 33

state 10

    (72) complex_math -> OPEN_BR . simple_math CLOSE_BR math_sign ID
    (73) complex_math -> OPEN_BR . simple_math CLOSE_BR math_sign NUMBER
    (76) complex_math -> OPEN_BR . simple_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
    (77) complex_math -> OPEN_BR . simple_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
    (78) complex_math -> OPEN_BR . complex_math CLOSE_BR math_sign ID
    (79) complex_math -> OPEN_BR . complex_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
    (80) complex_math -> OPEN_BR . complex_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
    (81) complex_logic -> OPEN_BR . simple_logic CLOSE_BR log_sign ID
    (82) complex_logic -> OPEN_BR . simple_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
    (83) complex_logic -> OPEN_BR . complex_logic CLOSE_BR log_sign ID
    (84) complex_logic -> OPEN_BR . complex_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
    (58) complex_rel -> OPEN_BR . simple_math CLOSE_BR rel_sign ID
    (59) complex_rel -> OPEN_BR . complex_math CLOSE_BR rel_sign ID
    (62) complex_rel -> OPEN_BR . simple_math CLOSE_BR rel_sign NUMBER
    (63) complex_rel -> OPEN_BR . complex_math CLOSE_BR rel_sign NUMBER
    (67) complex_rel -> OPEN_BR . math_expression CLOSE_BR rel_sign OPEN_BR math_expression CLOSE_BR
    (85) simple_math -> . ID math_sign ID
    (86) simple_math -> . ID math_sign NUMBER
    (87) simple_math -> . NUMBER math_sign ID
    (88) simple_math -> . NUMBER math_sign NUMBER
    (72) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign ID
    (73) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign NUMBER
    (74) complex_math -> . ID math_sign OPEN_BR simple_math CLOSE_BR
    (75) complex_math -> . NUMBER math_sign OPEN_BR simple_math CLOSE_BR
    (76) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
    (77) complex_math -> . OPEN_BR simple_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
    (78) complex_math -> . OPEN_BR complex_math CLOSE_BR math_sign ID
    (79) complex_math -> . OPEN_BR complex_math CLOSE_BR math_sign OPEN_BR simple_math CLOSE_BR
    (80) complex_math -> . OPEN_BR complex_math CLOSE_BR math_sign OPEN_BR complex_math CLOSE_BR
    (96) simple_logic -> . ID log_sign ID
    (81) complex_logic -> . OPEN_BR simple_logic CLOSE_BR log_sign ID
    (82) complex_logic -> . OPEN_BR simple_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
    (83) complex_logic -> . OPEN_BR complex_logic CLOSE_BR log_sign ID
    (84) complex_logic -> . OPEN_BR complex_logic CLOSE_BR log_sign OPEN_BR simple_logic CLOSE_BR
    (68) math_expression -> . simple_math
    (69) math_expression -> . complex_math

    ID              shift and go to state 50
    NUMBER          shift and go to state 51
    OPEN_BR         shift and go to state 48

    simple_math                    shift and go to state 49
    complex_math                   shift and go to state 52
    simple_logic                   shift and go to state 53
    complex_logic                  shift and go to state 54
    math_expression                shift and go to state 55

state 11

    (9) if_statement -> IF . OPEN_BR logic_expression CLOSE_BR EQUALS boolean_value then_else_statement
    (10) if_statement -> IF . OPEN_BR relational_expression CLOSE_BR then_else_statement

    OPEN_BR         shift and go to state 56


state 12

    (18) expression -> logic_expression .

    $end            reduce using rule 18 (expression -> logic_expression .)


state 13

    (19) expression -> relational_expression .

    $end            reduce using rule 19 (expression -> relational_expression .)


state 14

    (17) expression -> math_expression .
    (66) complex_rel -> math_expression . rel_sign math_expression
    (102) rel_sign -> . MORE_OR_EQUAL
    (103) rel_sign -> . LESS_OR_EQUAL
    (104) rel_sign -> . NOT_EQUAL
    (105) rel_sign -> . MORE
    (106) rel_sign -> . LESS
    (107) rel_sign -> . EQUALS

    $end            reduce using rule 17 (expression -> math_expression .)
    MORE_OR_EQUAL   shift and go to state 42
    LESS_OR_EQUAL   shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    MORE            shift and go to state 45
    LESS            shift and go to state 46
    EQUALS          shift and go to state 47

    rel_sign                       shift and go to state 57

state 15

    (20) expression -> assignment_expression .

    $end            reduce using rule 20 (expression -> assignment_expression .)


state 16

    (21) standart_cycle -> standart_while .

    $end            reduce using rule 21 (standart_cycle -> standart_while .)
    SEMICOLON       reduce using rule 21 (standart_cycle -> standart_while .)
    ELSE            reduce using rule 21 (standart_cycle -> standart_while .)
    END             reduce using rule 21 (standart_cycle -> standart_while .)


state 17

    (22) standart_cycle -> standart_for .

    $end            reduce using rule 22 (standart_cycle -> standart_for .)
    SEMICOLON       reduce using rule 22 (standart_cycle -> standart_for .)
    ELSE            reduce using rule 22 (standart_cycle -> standart_for .)
    END             reduce using rule 22 (standart_cycle -> standart_for .)


state 18

    (68) math_expression -> simple_math .
    (50) complex_rel -> simple_math . rel_sign ID
    (54) complex_rel -> simple_math . rel_sign NUMBER
    (102) rel_sign -> . MORE_OR_EQUAL
    (103) rel_sign -> . LESS_OR_EQUAL
    (104) rel_sign -> . NOT_EQUAL
    (105) rel_sign -> . MORE
    (106) rel_sign -> . LESS
    (107) rel_sign -> . EQUALS

  ! shift/reduce conflict for MORE_OR_EQUAL resolved as shift
  ! shift/reduce conflict for LESS_OR_EQUAL resolved as shift
  ! shift/reduce conflict for NOT_EQUAL resolved as shift
  ! shift/reduce conflict for MORE resolved as shift
  ! shift/reduce conflict for LESS resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    $end            reduce using rule 68 (math_expression -> simple_math .)
    MORE_OR_EQUAL   shift and go to state 42
    LESS_OR_EQUAL   shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    MORE            shift and go to state 45
    LESS            shift and go to state 46
    EQUALS          shift and go to state 47

  ! MORE_OR_EQUAL   [ reduce using rule 68 (math_expression -> simple_math .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 68 (math_expression -> simple_math .) ]
  ! NOT_EQUAL       [ reduce using rule 68 (math_expression -> simple_math .) ]
  ! MORE            [ reduce using rule 68 (math_expression -> simple_math .) ]
  ! LESS            [ reduce using rule 68 (math_expression -> simple_math .) ]
  ! EQUALS          [ reduce using rule 68 (math_expression -> simple_math .) ]

    rel_sign                       shift and go to state 58

state 19

    (69) math_expression -> complex_math .
    (51) complex_rel -> complex_math . rel_sign ID
    (55) complex_rel -> complex_math . rel_sign NUMBER
    (102) rel_sign -> . MORE_OR_EQUAL
    (103) rel_sign -> . LESS_OR_EQUAL
    (104) rel_sign -> . NOT_EQUAL
    (105) rel_sign -> . MORE
    (106) rel_sign -> . LESS
    (107) rel_sign -> . EQUALS

  ! shift/reduce conflict for MORE_OR_EQUAL resolved as shift
  ! shift/reduce conflict for LESS_OR_EQUAL resolved as shift
  ! shift/reduce conflict for NOT_EQUAL resolved as shift
  ! shift/reduce conflict for MORE resolved as shift
  ! shift/reduce conflict for LESS resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
    $end            reduce using rule 69 (math_expression -> complex_math .)
    MORE_OR_EQUAL   shift and go to state 42
    LESS_OR_EQUAL   shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    MORE            shift and go to state 45
    LESS            shift and go to state 46
    EQUALS          shift and go to state 47

  ! MORE_OR_EQUAL   [ reduce using rule 69 (math_expression -> complex_math .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 69 (math_expression -> complex_math .) ]
  ! NOT_EQUAL       [ reduce using rule 69 (math_expression -> complex_math .) ]
  ! MORE            [ reduce using rule 69 (math_expression -> complex_math .) ]
  ! LESS            [ reduce using rule 69 (math_expression -> complex_math .) ]
  ! EQUALS          [ reduce using rule 69 (math_expression -> complex_math .) ]

    rel_sign                       shift and go to state 59

state 20

    (70) logic_expression -> simple_logic .

    $end            reduce using rule 70 (logic_expression -> simple_logic .)
    SEMICOLON       reduce using rule 70 (logic_expression -> simple_logic .)
    ELSE            reduce using rule 70 (logic_expression -> simple_logic .)
    END             reduce using rule 70 (logic_expression -> simple_logic .)
    CLOSE_BR        reduce using rule 70 (logic_expression -> simple_logic .)


state 21

    (71) logic_expression -> complex_logic .

    $end            reduce using rule 71 (logic_expression -> complex_logic .)
    SEMICOLON       reduce using rule 71 (logic_expression -> complex_logic .)
    ELSE            reduce using rule 71 (logic_expression -> complex_logic .)
    END             reduce using rule 71 (logic_expression -> complex_logic .)
    CLOSE_BR        reduce using rule 71 (logic_expression -> complex_logic .)


state 22

    (48) relational_expression -> simple_rel .

    $end            reduce using rule 48 (relational_expression -> simple_rel .)
    CLOSE_BR        reduce using rule 48 (relational_expression -> simple_rel .)


state 23

    (49) relational_expression -> complex_rel .

    $end            reduce using rule 49 (relational_expression -> complex_rel .)
    CLOSE_BR        reduce using rule 49 (relational_expression -> complex_rel .)


state 24

    (87) simple_math -> NUMBER . math_sign ID
    (88) simple_math -> NUMBER . math_sign NUMBER
    (75) complex_math -> NUMBER . math_sign OPEN_BR simple_math CLOSE_BR
    (56) complex_rel -> NUMBER . rel_sign simple_math
    (57) complex_rel -> NUMBER . rel_sign complex_math
    (64) complex_rel -> NUMBER . rel_sign OPEN_BR simple_math CLOSE_BR
    (65) complex_rel -> NUMBER . rel_sign OPEN_BR complex_math CLOSE_BR
    (110) math_sign -> . PLUS
    (111) math_sign -> . MINUS
    (112) math_sign -> . DIVISION
    (113) math_sign -> . MULTIPLICATION
    (114) math_sign -> . DIV
    (115) math_sign -> . MOD
    (102) rel_sign -> . MORE_OR_EQUAL
    (103) rel_sign -> . LESS_OR_EQUAL
    (104) rel_sign -> . NOT_EQUAL
    (105) rel_sign -> . MORE
    (106) rel_sign -> . LESS
    (107) rel_sign -> . EQUALS

    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    DIVISION        shift and go to state 36
    MULTIPLICATION  shift and go to state 37
    DIV             shift and go to state 38
    MOD             shift and go to state 39
    MORE_OR_EQUAL   shift and go to state 42
    LESS_OR_EQUAL   shift and go to state 43
    NOT_EQUAL       shift and go to state 44
    MORE            shift and go to state 45
    LESS            shift and go to state 46
    EQUALS          shift and go to state 47

    math_sign                      shift and go to state 60
    rel_sign                       shift and go to state 61

state 25

    (37) standart_while -> WHILE . OPEN_BR logic_expression CLOSE_BR DO compound_statement
    (38) standart_while -> WHILE . OPEN_BR logic_expression CLOSE_BR DO simple_statement
    (39) standart_while -> WHILE . OPEN_BR relational_expression CLOSE_BR DO compound_statement
    (40) standart_while -> WHILE . OPEN_BR relational_expression CLOSE_BR DO simple_statement

    OPEN_BR         shift and go to state 62


state 26

    (41) standart_for -> FOR . ID EQUALITY NUMBER TO NUMBER DO compound_statement
    (42) standart_for -> FOR . ID EQUALITY NUMBER DOWNTO NUMBER DO compound_statement

    ID              shift and go to state 63


state 27

    (6) declarations -> VAR identifier_list . COLON type SEMICOLON
    (7) declarations -> VAR identifier_list . COLON type SEMICOLON complex_declar
    (29) identifier_list -> identifier_list . COMMA ID
